@@ -1,3 +1,6 @@
+[B]0.9.5[/B]
+Fallback to scraped library ratings whilst waiting for Skin Helper.
+
 [B]0.9.4[/B]
 Fix parentfolder list position
 New osd design
